--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+            android:exported="true"
+            android:parentActivityName=".PairingActivity">
+        </activity>
+        <activity
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +29,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".PairingActivity"
+            android:parentActivityName=".LoginActivity">
+        </activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:parentActivityName=".LoginActivity">
+        </activity>
+
     </application>
 
 </manifest>
